kubernetes/security/kyverno/policies/require-resource-requests.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-resource-requests
  annotations:
    policies.kyverno.io/title: Require Resource Requests
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  background: true
  rules:
    - name: check-resource-requests
      match:
        any:
          - resources:
              kinds:
                - Pod
      exclude:
        any:
          - resources:
              namespaces:
                - kube-system
                - kube-public
                - kube-node-lease
                - kyverno
                - argocd
                - cert-manager
                - istio-system
                - rook-ceph
                - sealed-secrets
                - cnpg-system
                - elastic-system
                - monitoring
                - envoy-gateway-system
                - gateway
      validate:
        failureAction: Audit
        message: "containers must set resources.requests.cpu and resources.requests.memory"
        pattern:
          spec:
            containers:
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
            =(initContainers):
              - resources:
                  requests:
                    memory: "?*"
                    cpu: "?*"
